@@ -1,3 +1,7 @@
+2011-08-29
+* ignore strings that will not significantly contribute to a score in the
+ranking algorithm. This speeds up the algorithm by vast amounts.
+
 2011-08-27
 * add unpacking ar archives, such as Debian packages
 
